--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
 	padding-top: 70px;
 	text-align: center;
 	color: white;
-	background: url("Spring Break 7.jpg");
+	background: url("images/backgrounds/Spring Break 7.jpg");
 	background-size: cover;
 }
 
@@ -26,7 +26,7 @@ img {
 }
 }
 
-.well {
+.navbar {
    background-color: rgba(245, 245, 245, 0.4);
 }
 
