--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ img {
 }
 }
 
-.navbar {
-   background-color: rgba(245, 245, 245, 0.4);
+.navbar-fixed-top {
+   background-color: rgba(245, 245, 245, 0.6);
 }
 
 @media screen and (max-width: 700px) and (min-width:0px){
