--- a/style.css
+++ b/style.css
@@ -3,12 +3,15 @@ body{
 	background-size: cover;
 	padding-top: 70px;
 	text-align: center;
-	color: white;
 }
 
 h5{
 	position: fixed;
 	bottom: 0;
+}
+
+h1,h2,h5,p{
+	color: white;
 }
 
 #below_pic{
@@ -34,17 +37,16 @@ h5{
 }
 
 @media screen and (min-width:701px){
-img {
-    max-width: 20%;
-		height: auto;
-}
+	img {
+	    max-width: 20%;
+			height: auto;
+	}
 }
 
 
 @media screen and (max-width: 700px) and (min-width:0px){
-
-		img {
-				max-width: 40%;
-				height: auto;
-		}
+	img {
+			max-width: 40%;
+			height: auto;
+	}
 }
