--- a/style.css
+++ b/style.css
@@ -10,7 +10,19 @@ h5{
 	bottom: 0;
 }
 
-h1,h2,h5,p{
+h1{
+	color: white;
+}
+
+h2{
+	color: white;
+}
+
+h5{
+	color: white;
+}
+
+p{
 	color: white;
 }
 
@@ -29,11 +41,6 @@ h1,h2,h5,p{
 
 .navbar-fixed-top {
    background-color: rgba(245, 245, 245, 0.6);
-}
-
-
-.small{
-	color: white;
 }
 
 @media screen and (min-width:701px){
