--- a/style.css
+++ b/style.css
@@ -10,19 +10,7 @@ h5{
 	bottom: 0;
 }
 
-h1{
-	color: white;
-}
-
-h2{
-	color: white;
-}
-
-h5{
-	color: white;
-}
-
-p{
+h1,h2,h5,p{
 	color: white;
 }
 
