--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ h1,h2,h5,p{
    background-color: rgba(245, 245, 245, 0.6);
 }
 
+.navbar .nav > li > a, .navbar .nav > li > a:first-letter {
+color:          lightgray;
+text-shadow:    none;
+}
+
 @media screen and (min-width:701px){
 	img {
 	    max-width: 20%;
