--- a/style.css
+++ b/style.css
@@ -32,13 +32,12 @@ h1,h2,h5,p{
 }
 
 .footer{
-		position: fixed;
-		text-align: center;
+		position: static;
 		bottom: 0px;
 		width: 100%;
 }
 
-.navbar .nav-collapse .nav {
+.nav-collapse{
 color:          lightgray;
 text-shadow:    none;
 }
