--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h5{
 	bottom: 0;
 }
 
-h1,h2,h5,p{
+h1,h2,p{
 	color: white;
 }
 
@@ -27,18 +27,17 @@ h1,h2,h5,p{
 	width: 30%;
 }
 
+/* I took this out because the menu is hard to read in mobile mode.
+ I will renable it when I figure out a fix.
+
 .navbar-fixed-top {
    background-color: rgba(245, 245, 245, 0.6);
 }
-
+*/
 .footer{
 		position: static;
+		padding-bottom: 0;
 		width: 100%;
-}
-
-.nav-collapse{
-color:          lightgray;
-text-shadow:    none;
 }
 
 @media screen and (min-width:701px){
