--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body{
 	background-repeat: no-repeat;
 	padding-top: 70px;
 	text-align: center;
+	height: 100%;
+	background-attachment: fixed;
 }
 
 h5{
