--- a/style.css
+++ b/style.css
@@ -37,6 +37,11 @@ h1,h2,p{
    background-color: rgba(245, 245, 245, 0.6);
 }
 */
+
+.carousel-inner > .item > img, .carousel-inner > .item > a > img {
+    width: 100%;
+}
+
 .footer{
 		position: static;
 		width: 100%;
