--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ h1,h2,p{
 */
 
 .carousel-inner > .item > img, .carousel-inner > .item > a > img {
-    width: 100%;
+    width:100%; height:208px;
 }
 
 .footer{
