--- a/style.css
+++ b/style.css
@@ -17,6 +17,15 @@ h1,h2,p{
 	color: white;
 }
 
+#loading_box{
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+	background:#000000;
+}
+
 #loading{
 	width:50px;
 	height: 50px;
