Profile pic issues

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ h1,h2,p{
     position: absolute; 
     width: 180px;
     height: 180px;
-    background: url(images/myself/IMG_0628.jpg) no-repeat;
+    background: url(images/myself/me.jpg) no-repeat;
     background-size: 180px 180px;
     margin: auto; 
     top: 0; left: 0; bottom: 20em; right: 0;
