--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1,h2,p{
 	top:0;
 	left:0;
 	width:100%;
-	height:100%;
+	height:150%; /* To investigate/fix for later. */
 	background:#ede9de;
 	z-index: 4;
 }
@@ -756,3 +756,46 @@ a p {
 }
 
 /* END OF CODE FROM JORDAN LACHANCE */
+
+/* ### Fold Outs ###*/
+
+.foldout{
+
+	position: absolute;
+	max-height:35px; /*----------------------------------------    sets the resting height of the content area*/
+	width:70%;
+	margin-left:auto;
+	margin-right:auto;
+	margin-bottom:12px;
+	text-align: center;
+	top:50px;
+	border:thin black solid;
+	border-radius:8px;
+	overflow: hidden; /*---------------------------------------  hides the text outside of the div------*/
+	background-color:gray;  /*----------------------------------sets the resting background color----*/
+
+
+/* ------------  below are the actual transition functions for each browser ---------------------------------*/
+
+	transition: max-height 1s, background-color 1s;
+
+	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
+
+	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
+
+	-o-transition: max-height 1s, background-color 1s;          /* Opera */
+
+}
+
+.foldout p{
+
+	margin:10px 10px 10px 10px; /*gives the text a little elbow room*/
+}
+
+.foldout:hover{
+
+	background-color:white; /* Transition-to when hovered */
+
+	max-height:1000px;      /* this value must be set for this to work could be 1000 100000 1000000 */
+
+}
