--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ h1,h2,p{
 	color: white;
 }
 
+h1,h2{
+	text-align: center;
+}
+
 #loading_box{
 	position:absolute;
 	top:0;
@@ -82,44 +86,44 @@ h1,h2,p{
 /* CODE FROM JASCHA */
 
 .profilepicture {
-    position: absolute; 
+    position: absolute;
     width: 180px;
     height: 180px;
     background: url(images/myself/me.jpg) no-repeat;
     background-size: 180px 180px;
-    margin: auto; 
+    margin: auto;
     top: 0; left: 0; bottom: 20em; right: 0;
     z-index: 3;
-  
-    -webkit-box-shadow: 
+
+    -webkit-box-shadow:
       0 0 0 10px  rgba(255,255,255,.2),
       0 0 5px 2px rgba(0,0,0,.3),
 inset 0 0 0 10px  rgba(0,0,255,.2);
-    -moz-box-shadow: 
+    -moz-box-shadow:
       0 0 0 10px  rgba(255,255,255,.2),
       0 0 5px 2px rgba(0,0,0,.3),
 inset 0 0 0 10px  rgba(0,0,255,.2);
-    box-shadow: 
+    box-shadow:
       0 0 0 10px  rgba(255,255,255,.2),
       0 0 5px 2px rgba(0,0,0,.3),
 inset 0 0 0 10px  rgba(0,0,255,.2);
-  
-    -webkit-border-radius: 999px; 
+
+    -webkit-border-radius: 999px;
     -moz-border-radius: 999px;
     border-radius: 999px;
     /* border-radius: 50% has issues on some mobile browsers */
 }
 
 .pulse1 {
-    position: absolute;  
+    position: absolute;
     width: 200px;
     height: 200px;
-    margin: auto; 
+    margin: auto;
     top: 0; left: 0; bottom: 20em; right: 0;
     z-index: 1;
     opacity: 0;
     border: 3px solid rgba(255,255,255,.1);
-  
+
     -webkit-animation: pulsejg1 4s linear infinite;
     -moz-animation: pulsejg1 4s linear infinite;
     animation: pulsejg1 4s linear infinite;
@@ -138,12 +142,12 @@ inset 0 0 0 10px  rgba(0,0,255,.2);
     position: absolute;
     width: 200px;
     height: 200px;
-    margin: auto; 
+    margin: auto;
     top: 0; left: 0; bottom: 20em; right: 0;
     z-index: 2;
     opacity: 0;
     border: 1px solid rgba(255,255,255,0);
-  
+
     -webkit-animation: pulsejg2 4s linear infinite;
     -moz-animation: pulsejg2 4s linear infinite;
     animation: pulsejg2 4s linear infinite;
@@ -168,7 +172,7 @@ inset 0 0 0 10px  rgba(0,0,255,.2);
 		margin-top: 50px;
 
 	}
-	
+
 }
 
 @-webkit-keyframes pulsejg1 {
@@ -475,7 +479,7 @@ a {
 	.menu{
 		margin-top:150px;
 	}
-	
+
 }
 
 
@@ -735,7 +739,7 @@ a p {
 	.credit{
 		top:600px;
 	}
-	
+
 }
 
 @media all and (min-height: 700px) {
@@ -759,39 +763,32 @@ a p {
 
 /* ### Fold Outs ###*/
 
-.hidden-menu{
+.hidden-bio{
+	/* ------------  below are the actual transition functions for each browser ---------------------------------*/
 
-	position: absolute;
-	height:500px; /*----------------------------------------    sets the resting height of the content area*/
+
+	position: relative;
+	height:auto; /*----------------------------------------    sets the resting height of the content area*/
 	width:500px;
-	text-align: center;
-  left: 33%;
-  top: 700px;
+	top: 800px;
+	padding-bottom: 50px;
+	margin-left: auto;
+	margin-right: auto;
+
+	padding-bottom: 50px;
+}
+
+.hidden-bio-content{
+
 	border:thin black solid;
 	border-radius:8px;
+	text-align: left;
 	overflow: hidden; /*---------------------------------------  hides the text outside of the div------*/
 	background-color:gray;  /*----------------------------------sets the resting background color----*/
 
-
-/* ------------  below are the actual transition functions for each browser ---------------------------------*/
-
-	transition: max-height 1s, background-color 1s;
-
-	-moz-transition: max-height 1s, background-color 1s;        /* Firefox 4 */
-
-	-webkit-transition: max-height 1s, background-color 1s;     /* Safari and Chrome */
-
-	-o-transition: max-height 1s, background-color 1s;          /* Opera */
-
 }
 
-.hidden-menu p{
+.hidden-bio p{
 
 	margin:10px 10px 10px 10px; /*gives the text a little elbow room*/
-}
-
-.hidden-menu:hover{
-
-	max-height:1000px;      /* this value must be set for this to work could be 1000 100000 1000000 */
-
 }
