--- a/style.css
+++ b/style.css
@@ -785,6 +785,14 @@ a p {
     }
 }
 
+@media only screen and (max-width: 700px) and (max-height: 800px) {
+    #titleth {
+        position: relative;
+				top: 0px;
+			}
+}
+
+
 .hidden-bio-content{
 
 	border:thin black solid;
