--- a/style.css
+++ b/style.css
@@ -785,10 +785,9 @@ a p {
     }
 }
 
-@media only screen and (max-width: 700px) and (max-height: 800px) {
+@media only screen and (max-height: 800px), (max-width:700px) {
     #titleth {
-        position: relative;
-				top: 0px;
+        visibility: hidden;
 			}
 }
 
