--- a/style.css
+++ b/style.css
@@ -810,3 +810,63 @@ a p {
 
 	margin:10px 10px 10px 10px; /*gives the text a little elbow room*/
 }
+
+/*Source: http://joshnh.com/weblog/how-to-make-an-alert-bar/*/
+#alert {
+    position: static;
+}
+#alert:hover:after {
+    background: hsla(0,0%,0%,.8);
+    border-radius: 3px;
+    color: #f6f6f6;
+    content: 'Click to dismiss';
+    font: bold 12px/30px sans-serif;
+    height: 30px;
+    left: 50%;
+    margin-left: -60px;
+    position: absolute;
+    text-align: center;
+    top: 120px;
+    width: 120px;
+}
+#alert:hover:before {
+    border-bottom: 10px solid hsla(0,0%,0%,.8);
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+    content: '';
+    height: 0;
+    left: 50%;
+    margin-left: -10px;
+    position: absolute;
+    top: 100px;
+    width: 0;
+}
+#alert:target {
+    display: none;
+}
+.alert {
+    animation: alert 1s ease forwards;
+    background-color: #c4453c;
+    background-image: linear-gradient(135deg, transparent,
+                      transparent 25%, hsla(0,0%,0%,.1) 25%,
+                      hsla(0,0%,0%,.1) 50%, transparent 50%,
+                      transparent 75%, hsla(0,0%,0%,.1) 75%,
+                      hsla(0,0%,0%,.1));
+    background-size: 20px 20px;
+    box-shadow: 0 5px 0 hsla(0,0%,0%,.1);
+    color: #f6f6f6;
+    display: block;
+    font: bold 16px/40px sans-serif;
+    height: 400px;
+    position: static;
+    text-align: center;
+    text-decoration: none;
+    top: -45px;
+    width: 100%;
+}
+
+@keyframes alert {
+    0% { opacity: 0; }
+    50% { opacity: 1; }
+    100% { top: 0; }
+}
